# hw_interview_questions

./: .gitmodules  CMakeLists.txt  README.md
arithmetic/: CMakeLists.txt
arithmetic/multiplier/: multiplier.cpp  multiplier.sv
clocking/mcp_formulation/: CMakeLists.txt
cmake/: FindSystemC.cmake  FindVerilator.cmake  FindVivado.cmake  hw.cmake
control/vending_machine_fsm/: CMakeLists.txt
general/count_zeros_32/: CMakeLists.txt
general/detect_sequence/: CMakeLists.txt
general/one_or_two/: CMakeLists.txt
libtb/: CMakeLists.txt  libtb.hpp  options.hpp.in  random.cpp  random.hpp  scprimitives.cpp  scprimitives.hpp  task.cpp  task.hpp  tb.cpp  tb.hpp  top.hpp  utility.cpp  utility.hpp  verilator.hpp
libv/: CMakeLists.txt  libv_macros_pkg.vh  libv_pkg.vh
libv/arbitrators/: rr.sv
libv/arithmetic/: CMakeLists.txt  arithmetic_pkg.vh  carry_chain_brent_kung.sv  carry_chain_hybrid.sv  carry_chain_kogge_stone.sv  csa.sv  fast_adder.sv  increment.sv  mlt5c.sv  multiplier_booth_r4.sv
libv/logic/: clz.sv  encoder.sv  ffs.sv  flm.sv  gray_decode.sv  gray_encode.sv  mask.sv  popcnt.sv  rotate.sv
libv/memory/: dpsram.sv  dpsram_pkg.vh  multi_port_sram_pkg.sv  multi_ported_sram.sv  multi_ported_sram_lvt_flop.sv  multi_ported_sram_pkg.svh  multi_ported_sram_xor.sv  spsram.sv  spsram_pkg.vh  sram_1rNw.sv  sspsram.sv
libv/misc/: CMakeLists.txt  rob.sv
libv/pd/: sync_ff.sv
libv/queue/: fifo_async.sv  fifo_basic.sv  fifo_crdt.sv
pipelines/linear/comb_stall/: CMakeLists.txt
pipelines/linear/delay_pipe_mov/: CMakeLists.txt
pipelines/linear/delay_pipe_static/: CMakeLists.txt
pipelines/linear/double_buffer/: CMakeLists.txt
pipelines/linear/read_modify_write/: CMakeLists.txt
pipelines/linear/tomasulo/: CMakeLists.txt
queues/fifo_multi_push/: CMakeLists.txt
scripts/: generate_brent_kung.py  generate_csa.py  run_verilator.sh
solutions/: CMakeLists.txt
solutions/arithmetic/: CMakeLists.txt
solutions/arithmetic/div_by_3/: CMakeLists.txt  div_by_3.cpp  div_by_3.sv
solutions/clocking/: CMakeLists.txt
solutions/control/: CMakeLists.txt
solutions/design/: CMakeLists.txt
solutions/general/: CMakeLists.txt
solutions/memory/: CMakeLists.txt
solutions/pipelines/: CMakeLists.txt
solutions/problem_solving/: CMakeLists.txt
solutions/queues/: CMakeLists.txt
tests/: CMakeLists.txt
tests/tb/: CMakeLists.txt  utility.cpp
(+156 files in other folders)
